<resources>
    <string name="app_name">Popular Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings_title">Movie Settings</string>

    <string name="simena_productions">Simena Productions</string>
    <string name="simena_email">simena.arts@gmail.com</string>
    <string name="poster_description">Movie Poster</string>
    <string name="header_description">Image Header</string>
    <string name="overview_label">Overview</string>
    <string name="app_header_detail">Movie Details</string>
    <string name="title_movies">Movies</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_tv_series">Tv Series</string>

    <!-- Preference Theme Labels and Values -->
    <string name="preference_theme_label">Theme</string>
    <string name="preference_theme_key">theme</string>

    <string name="pref_theme_label_red">Shroom Haze</string>
    <string name="pref_theme_label_blue">Rainbow Blue</string>

    <string name="pref_theme_red_value" translatable="false">ShroomHaze</string>
    <string name="pref_theme_blue_value" translatable="false">RainbowBlue</string>

    <!-- Movie menu -->
    <string name="upcoming_movies">Upcoming</string>
    <string name="latest_movies">Latest</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="share_icon_description">Share Video Icon</string>
    <string name="author_label">Author:</string>
    <string name="no_reviews_label">No Reviews Found</string>
    <string name="no_videos_label">No Videos Found</string>
    <string name="fav_movies_title">Favorite Movies</string>
</resources>
