<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/title_movies">

            <menu>

                <item
                    android:id="@+id/top_rated"
                    android:icon="@drawable/ic_movie"
                    android:title="@string/title_top_rated"/>
                <item
                    android:id="@+id/popular"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/title_popular_movies"/>
                <item
                    android:id="@+id/now_playing"
                    android:icon="@drawable/movie_roll"
                    android:title="@string/title_now_playing"/>
                <item
                    android:id="@+id/upcoming"
                    android:icon="@drawable/movie_roll"
                    android:title="@string/upcoming_movies"/>

            </menu>

        </item>
    </group>


    <item android:title="@string/title_favorites">
        <menu>
            <item
                android:id="@+id/fav_movies"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_movies"/>

        </menu>
    </item>

</menu>
