<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="com.artist.web.popularmovies.activity.DetailMovieActivity">

  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraint_layout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_16dp"
    android:background="@drawable/background_bar">

    <include layout="@layout/appbar_toolbar"/>

          <ImageView
          android:id="@+id/imageViewHeader"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:adjustViewBounds="true"
          android:alpha="0.6"
          android:contentDescription="@string/header_description"
          android:scaleType="centerCrop"
          app:layout_constraintDimensionRatio="780:450"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/header"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_10dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_10dp"/>

      <ImageView
          android:id="@+id/imageViewPoster"
          android:layout_width="0dp"
          android:layout_height="@dimen/poster_height"
          android:layout_marginBottom="@dimen/margin_8dp"
          android:contentDescription="@string/poster_description"
          app:layout_constraintBottom_toBottomOf="@+id/imageViewHeader"
          app:layout_constraintDimensionRatio="w,2:3"
          app:layout_constraintStart_toStartOf="@+id/guideline"
          app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
          app:srcCompat="@drawable/poster"/>

    <TextView
        android:id="@+id/textViewMovieHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:padding="@dimen/padding_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fav_button"
        app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
        tools:text="Beauty and the Beast"/>

      <TextView
          android:id="@+id/movie_genre"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toRightOf="@+id/imageViewPoster"
          app:layout_constraintTop_toBottomOf="@+id/textViewMovieHeading"
          app:layout_constraintRight_toLeftOf="@id/guideline2"
          android:layout_marginStart="30dp"
          android:layout_marginTop="6dp"
          android:textSize="@dimen/text_16sp"
          tools:text="Comedy, Action"/>

    <ImageButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_6dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHeader"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textViewMovieHeading"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
        android:onClick="onClickAddMovie"
        app:srcCompat="@drawable/ic_favorite_border"/>

    <TextView
        android:id="@+id/textViewRating"
        style="@style/Movie_Data_Style"
        android:drawableStart="@drawable/star"
        android:layout_marginBottom="@dimen/margin_60dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHeader"
        tools:text="6.4"/>

    <TextView
        android:id="@+id/textViewDate"
        style="@style/Movie_Data_Style"
        android:drawableStart="@drawable/ic_date"
        app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating"
        tools:text="March 2017"/>

      <TextView
          android:id="@+id/textViewDuration"
          style="@style/Movie_Data_Style"
          android:drawableStart="@drawable/ic_timer"
          tools:text="120 min"
          app:layout_constraintStart_toEndOf="@id/imageViewPoster"
          app:layout_constraintTop_toBottomOf="@+id/textViewDate"/>


    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_22dp"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/movie_genre"
        tools:text="Lorem Ipsumnnbdvj bhjvbhfvb jfdjhfbvjhvbh vbdhbvhjf"/>

      <View
          android:id="@+id/separator_plot"
          android:layout_width="match_parent"
          android:layout_height="@dimen/margin_2dp"
          app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
          android:layout_marginTop="@dimen/margin_10dp"
          android:layout_marginStart="@dimen/margin_6dp"
          android:layout_marginEnd="@dimen/margin_6dp"
          android:background="@android:color/holo_blue_dark"
          app:layout_constraintLeft_toLeftOf="@id/guideline"
          app:layout_constraintRight_toRightOf="@id/guideline2"/>

      <TextView
          android:id="@+id/trailer_label"
          style="@style/Text_Heading_Style"
          android:text="@string/trailers_label"
          app:layout_constraintTop_toBottomOf="@+id/separator_plot"
          app:layout_constraintLeft_toLeftOf="@id/guideline"/>

      <android.support.v7.widget.RecyclerView
          android:id="@+id/recyclerView_trailers"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_10dp"
          app:layout_constraintLeft_toLeftOf="@+id/guideline"
          app:layout_constraintRight_toRightOf="@+id/guideline2"
          app:layout_constraintTop_toBottomOf="@+id/trailer_label"/>

      <View
          android:id="@+id/separator_trailers"
          android:layout_width="match_parent"
          android:layout_height="@dimen/margin_2dp"
          app:layout_constraintTop_toBottomOf="@+id/recyclerView_trailers"
          android:layout_marginTop="@dimen/margin_10dp"
          android:layout_marginStart="@dimen/margin_6dp"
          android:layout_marginEnd="@dimen/margin_6dp"
          android:background="@android:color/holo_blue_dark"
          app:layout_constraintLeft_toLeftOf="@id/guideline"
          app:layout_constraintRight_toRightOf="@id/guideline2"/>

      <TextView
          android:id="@+id/reviews_label"
          style="@style/Text_Heading_Style"
          android:text="@string/reviews_label"
          android:layout_marginBottom="@dimen/margin_16dp"
          app:layout_constraintTop_toBottomOf="@+id/separator_trailers"
          app:layout_constraintLeft_toLeftOf="@id/guideline"/>

      <android.support.v7.widget.RecyclerView
          android:id="@+id/recyclerView_reviews"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_22dp"
          android:layout_marginTop="@dimen/margin_10dp"
          app:layout_constraintLeft_toLeftOf="@+id/guideline"
          app:layout_constraintRight_toRightOf="@+id/guideline2"
          app:layout_constraintTop_toBottomOf="@+id/reviews_label"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>
